[gd_scene load_steps=8 format=3 uid="uid://n2c52flnw1t0"]

[ext_resource type="Theme" uid="uid://byujsu8xvuvyt" path="res://assets/theme/main.theme" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://caxykqte1dlw3" path="res://assets/ui/ref_img_canadair.jpg" id="2_ekxnf"]
[ext_resource type="Script" uid="uid://b3ksw417y6wmq" path="res://scenes/main_menu.gd" id="2_wu84c"]
[ext_resource type="PackedScene" uid="uid://bbigim1y05ox2" path="res://scenes/pnl_settings.tscn" id="4_8ln24"]
[ext_resource type="PackedScene" uid="uid://cb0mb3td40ghv" path="res://scenes/pnl_credits.tscn" id="5_8ln24"]
[ext_resource type="Theme" uid="uid://d4nfuafpb5ani" path="res://scenes/main_menu_buttons.theme" id="6_rtw2f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtw2f"]

[node name="main_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l6cm7")
script = ExtResource("2_wu84c")

[node name="bg_col" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="bg_texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ekxnf")
expand_mode = 1
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="lb_main" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 36
theme_override_constants/margin_bottom = 36

[node name="hb" type="HBoxContainer" parent="margin"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 2

[node name="tab" type="TabContainer" parent="margin/hb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_rtw2f")
current_tab = 0
tabs_visible = false

[node name="pnl_settings" parent="margin/hb/tab" instance=ExtResource("4_8ln24")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_tab_index = 0

[node name="pnl_credits" parent="margin/hb/tab" instance=ExtResource("5_8ln24")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
in_main_menu = true
metadata/_tab_index = 1

[node name="vb_buttons" type="VBoxContainer" parent="margin/hb"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_rtw2f")
alignment = 1

[node name="btn_start" type="Button" parent="margin/hb/vb_buttons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Start Game"
alignment = 2

[node name="btn_settings" type="Button" parent="margin/hb/vb_buttons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Settings"
alignment = 2

[node name="btn_leaderboard" type="Button" parent="margin/hb/vb_buttons"]
layout_mode = 2
size_flags_horizontal = 8
disabled = true
text = "Leaderboard"
alignment = 2

[node name="btn_credits" type="Button" parent="margin/hb/vb_buttons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Credits"
alignment = 2

[node name="btn_quit" type="Button" parent="margin/hb/vb_buttons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Quit"
alignment = 2

[connection signal="pressed" from="margin/hb/vb_buttons/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="margin/hb/vb_buttons/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="margin/hb/vb_buttons/btn_leaderboard" to="." method="_on_btn_leaderboard_pressed"]
[connection signal="pressed" from="margin/hb/vb_buttons/btn_credits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="margin/hb/vb_buttons/btn_quit" to="." method="_on_btn_quit_pressed"]
